03-beyla/05-beyla-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: beyla-metrics
  namespace: beyla
spec:
  to:
    kind: Service
    name: beyla-metrics
  port:
    targetPort: 9090
  tls:
    termination: edge
